Fixed mobile overflow problem

--- a/_static/css/medass/medass-index.css
+++ b/_static/css/medass/medass-index.css
@@ -1,9 +1,17 @@
 .vertical-slider {
-    width: 300px; /* Set the width of the vertical slider */
-    height: 300px; /* Set the height of the vertical slider */
-    transform: rotate(270deg); /* Rotate the slider vertically */
+	width: 300px; /* Set the width of the vertical slider */
+	height: 300px; /* Set the height of the vertical slider */
+	transform: rotate(270deg); /* Rotate the slider vertically */
 }
 
 .vertical-slider::-webkit-slider-thumb {
-    transform: rotate(90deg); /* Rotate the slider thumb back to normal */
+	transform: rotate(90deg); /* Rotate the slider thumb back to normal */
+}
+
+/* Show plotting box only when it does not disturb screen */
+@media screen and (max-width: 780px) {
+	#plotting-box {
+		visibility: hidden;
+		display: none;
+	}
 }
