--- a/_static/css/style-general.css
+++ b/_static/css/style-general.css
@@ -1,3 +1,9 @@
 * {
     font-family: 'Pretendard', 'Arial', 'sans-serif';
 }
+
+/* Scroll limit for mobile device */
+html, body {
+    overflow-x: hidden;
+	overscroll-behavior: none;
+}
